2004-05-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* prefs.c: Fix poitner castings.

2004-05-17  Dan Winship  <danw@novell.com>

	* src/adjmtrx.c,
	* src/bintree.c,
	* src/connect4.c,
	* src/evaluate.c,
	* src/heurist.c,
	* src/ia_main.c,
	* src/pbsolver.c: Remove #include <malloc.h>. (Welcome to the
	90s!)

2004-03-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* data/gnect.schemas.in: Changed the default key bindings 
	to use the arrow keys.

2004-03-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/gfx.c:
	* src/gfx.h:
	
	* src/main.c: Rationalise the declaration of gc so that it is
	linked properly with -fdata-sections.

2004-03-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/main.c (on_help_about): Fix up the copyright notice.

2004-03-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/mainwindow.png:
	* help/C/gnect.xml: Updated for 2.6 and Tim's rewrite. I hope I 
	got the theme details right.

2004-02-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/ia_main.c (endgame): Avoid a compiler warning.

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/main.c (on_help_about): translator_credits ->
	translator-credits.

2004-02-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* main.c:
	* prefs.c:	
	* theme.c: Patch from Paolo Borelli to remove code deprecated in
	glib/gtk+ 2.4.

2004-01-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* data/Makefile.am: spaces->tab, fixing gnect schemas install
	(thanks Joe).

2004-01-08  Tim Musson  <trmusson@ihug.co.nz>

	* src/gfx.c:
	* src/gfx.h:
	* src/main.c:
	* src/main.h:
	* src/prefs.c:
	* src/prefs.h:
	* src/theme.c:
	* src/theme.h: Rewritten (an attempt at spaghetti reduction).

	* src/connect4.h: Added playgame prototype.
	* src/connect4.c: Tweaks to fatal error treatment.

	* data/gnect.schemas.in: Added theme_id key. Removed theme, startmode,
	  soundmode and grid keys.

	* src/Makefile.am:
	* data/Makefile.am: