@@ -164,6 +164,7 @@ iagno/othello.c
 iagno/properties.c
 libgames-support/games-gconf.c
 libgames-support/games-card-selector.c
+libgames-support/games-controls.c
 mahjongg/mahjongg.c
 mahjongg/mahjongg.desktop.in
 mahjongg/mahjongg.schemas.in
