@@ -1,3 +1,10 @@
+2004-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* games-controls.h:
+	* games-controls.c:
+	* Makefile.am: Add Paolo Borelli's key control selection
+	widget.
+
 2004-05-27  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* games-card-selector.c: Remove an unnecessary unref. I still
