@@ -1,3 +1,7 @@
+2004-06-05  Callum McKenzie <callum@physics.otago.ac.nz>
+
+	* POTFILES.in: Add games-controls.c.
+
 2004-06-04  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
