@@ -1,3 +1,8 @@
+2004-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* prefs.c: Use Paolo Borelli's new key control selection code.
+	This is a vast improvement over the old code.
+
 2004-05-26  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* prefs.c: Fix poitner castings.
